[gd_scene load_steps=12 format=2]

[ext_resource path="res://efx/shader/scripts/fog.shader" type="Shader" id=1]
[ext_resource path="res://map/scenes/nogias_ysort.gd" type="Script" id=2]
[ext_resource path="res://map/tres/farm/earth.tres" type="TileSet" id=5]
[ext_resource path="res://map/textures/background/bg.png" type="Texture" id=6]
[ext_resource path="res://map/tres/farm/mining.tres" type="TileSet" id=7]
[ext_resource path="res://map/tres/farm/water.tres" type="TileSet" id=8]
[ext_resource path="res://map/scenes/cave/mining_cave_manager.gd" type="Script" id=9]
[ext_resource path="res://map/textures/tiles/highlight.png" type="Texture" id=11]
[ext_resource path="res://map/tres/farm/mining_ground_tile.tres" type="TileSet" id=12]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/color = Vector3( 0, 8, 8 )
shader_param/OCTAVES = 6

[sub_resource type="ShaderMaterial" id=1]

[node name="MapManager" type="Navigation2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
scale = Vector2( 30, 30 )
z_index = -3
texture = ExtResource( 6 )

[node name="FogShader" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.509804, 0.509804, 0.588235 )
material = SubResource( 2 )
scale = Vector2( 15, 15 )
z_index = 10
texture = ExtResource( 6 )

[node name="DarkBackground" type="CanvasModulate" parent="."]
material = SubResource( 1 )
color = Color( 0.0941176, 0.0901961, 0.176471, 1 )

[node name="WaterTileMap" type="TileMap" parent="."]
z_index = -2
mode = 1
tile_set = ExtResource( 8 )
cell_size = Vector2( 46, 24 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="EarthTileMap" type="TileMap" parent="."]
z_index = -2
mode = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 46, 24 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="MiningTileMap" type="TileMap" parent="."]
z_index = -2
mode = 1
tile_set = ExtResource( 7 )
cell_size = Vector2( 46, 24 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="MiningGroundTileMap" type="TileMap" parent="."]
z_index = -2
mode = 1
tile_set = ExtResource( 12 )
cell_size = Vector2( 46, 24 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="TileHightlight" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 11 )

[node name="YSort" type="YSort" parent="."]
sort_enabled = false
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true
